deploy/graphql-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: graphql-engine
  name: graphql-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      service: graphql-engine
  template:
    metadata:
      labels:
        service: graphql-engine
    spec:
      containers:
        - env:
            - name: HASURA_GRAPHQL_ADMIN_SECRET
              valueFrom:
                configMapKeyRef:
                  key: HASURA_GRAPHQL_ADMIN_SECRET
                  name: db-secret-env
            - name: HASURA_GRAPHQL_DATABASE_URL
              valueFrom:
                configMapKeyRef:
                  key: HASURA_GRAPHQL_DATABASE_URL
                  name: db-secret-env
            - name: HASURA_GRAPHQL_DEV_MODE
              valueFrom:
                configMapKeyRef:
                  key: HASURA_GRAPHQL_DEV_MODE
                  name: hasura-secret-env
            - name: HASURA_GRAPHQL_ENABLED_LOG_TYPES
              valueFrom:
                configMapKeyRef:
                  key: HASURA_GRAPHQL_ENABLED_LOG_TYPES
                  name: hasura-secret-env
            - name: HASURA_GRAPHQL_ENABLE_CONSOLE
              valueFrom:
                configMapKeyRef:
                  key: HASURA_GRAPHQL_ENABLE_CONSOLE
                  name: hasura-secret-env
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: db-secret-env
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: db-secret-env
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: db-secret-env
          image: hasura/graphql-engine:v2.0.0-alpha.5
          name: graphql-engine
          ports:
            - containerPort: 8080
      restartPolicy: Always
