deploy/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: postgres
    spec:
      containers:
        - env:
            - name: HASURA_GRAPHQL_ADMIN_SECRET
              valueFrom:
                configMapKeyRef:
                  key: HASURA_GRAPHQL_ADMIN_SECRET
                  name: db-secret-env
            - name: HASURA_GRAPHQL_DATABASE_URL
              valueFrom:
                configMapKeyRef:
                  key: HASURA_GRAPHQL_DATABASE_URL
                  name: db-secret-env
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: db-secret-env
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: db-secret-env
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: db-secret-env
          image: postgres
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume
      restartPolicy: Always
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-volume
