deploy/graphql-engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: graphql-engine
  name: graphql-engine
spec:
  ports:
    - name: '8080'
      port: 8080
      targetPort: 8080
  selector:
    service: graphql-engine
