deploy/pattr-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: pattr-frontend
  name: pattr-frontend
spec:
  ports:
    - name: '80'
      port: 80
      targetPort: 3001
  selector:
    service: pattr-frontend
