deploy/graphql-engine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pattr-graphql-engine
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-issuer'
spec:
  ingressClassName: 'nginx'
  tls:
    - hosts:
        - pattr.chat
      secretName: pattr-tls
  rules:
    - host: pattr.chat
      http:
        paths:
          - path: /v1/graphql
            pathType: Prefix
            backend:
              service:
                name: graphql-engine
                port:
                  number: 8080
