deploy/pattr-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pattr
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-issuer'
spec:
  ingressClassName: 'nginx'
  tls:
    - hosts:
        - pattr.chat
      secretName: pattr-tls
  rules:
    - host: pattr.chat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pattr-frontend
                port:
                  number: 3001
